--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -836,5 +836,10 @@
   "Search": {
     "Products": "Products",
     "Stores": "Stores"
+  },
+  "Customisation": {
+    "Select any and upto": "Select any {{minQuantity}} and upto {{maxQuantity}} options",
+    "Select any": "Select any {{minQuantity}} options",
+    "Select upto": "Select upto {{maxQuantity}} options"
   }
 }
