--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -803,7 +803,8 @@
     "Something went wrong, please try again after some time": "Something went wrong, please try again after some time",
     "Some orders are not initialized": "Some orders are not initialized",
     "Available Cities": "Available Cities",
-    "The app is only for Delhi city": "The app is only for Delhi city"
+    "The app is only for Delhi city": "The app is only for Delhi city",
+    "Open with": "Open with"
   },
   "Seller QR": {
     "ONDC QR se Bharat Khulega": "ONDC QR se Bharat Khulega"
