--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -803,7 +803,8 @@
     "Something went wrong, please try again after some time": "काहीतरी चूक झाली आहे, कृपया काही काळानंतर पुन्हा प्रयत्न करा",
     "Some orders are not initialized": "काही ऑर्डर सुरू केल्या जात नाहीत.",
     "Available Cities": "उपलब्ध शहरे",
-    "The app is only for Delhi city": "हे एप केवळ दिल्ली शहरासाठी आहे."
+    "The app is only for Delhi city": "हे एप केवळ दिल्ली शहरासाठी आहे.",
+    "Open with": "सह उघडा"
   },
   "Seller QR": {
     "ONDC QR se Bharat Khulega": "ओएनडीसी क्यूआर से भारत खुलेगा"
