--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -803,7 +803,8 @@
     "Something went wrong, please try again after some time": "ஏதோ தவறு நடந்தது, சிறிது நேரத்திற்குப் பிறகு மீண்டும் முயற்சிக்கவும்",
     "Some orders are not initialized": "சில ஆர்டர்கள் துவக்கப்படவில்லை.",
     "Available Cities": "கிடைக்கக்கூடிய நகரங்கள்",
-    "The app is only for Delhi city": "இந்த செயலி டெல்லி நகரத்திற்கு மட்டுமே பொருந்தும்"
+    "The app is only for Delhi city": "இந்த செயலி டெல்லி நகரத்திற்கு மட்டுமே பொருந்தும்",
+    "Open with": "உடன் திறக்கவும்"
   },
   "Seller QR": {
     "ONDC QR se Bharat Khulega": "ஒஎன்டிசி கியூஆர் சே பாரத் குலேகா"
