--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -744,7 +744,9 @@
   },
   "Provider Details": {
     "Order Cancelled": "ஆர்டர் ரத்து செய்யப்பட்டது",
-    "Download Invoice": "விலைப்பட்டியலைப் பதிவிறக்கவும்"
+    "Download Invoice": "விலைப்பட்டியலைப் பதிவிறக்கவும்",
+    "Go Home": "கோ ஹோம்",
+    "Incorrect specifications or malformed request": "இன்கரெக்ட் ஸ்பெசிபிகேஷன்ஸ் ஆர் மால்ஃபார்ம்ட் ரிக்வெஸ்ட்"
   },
   "Raise Issue": {
     "Raise an Issue": "ஒரு பிரச்சினையை எழுப்புங்கள்",
