chg: translation for incorrect barcode

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -746,7 +746,8 @@
     "Order Cancelled": "অর্ডার বাতিল",
     "Download Invoice": "চালান ডাউনলোড করুন",
     "Go Home": "গো হোম",
-    "Incorrect specifications or malformed request": "ইনকারেক্ট স্পেসিফিকেশনসহ ওর ম্যালফরমড রিকোয়েস্ট"
+    "Incorrect specifications or malformed request": "ইনকারেক্ট স্পেসিফিকেশনসহ ওর ম্যালফরমড রিকোয়েস্ট",
+    "This store does not service your location": "This store does not service your location"
   },
   "Raise Issue": {
     "Raise an Issue": "একটি প্রসঙ্গ তুলে ধরুন",
