--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -746,7 +746,8 @@
     "Order Cancelled": "ऑर्डर रद्द केली",
     "Download Invoice": "चलन डाऊनलोड करा",
     "Go Home": "गो होम",
-    "Incorrect specifications or malformed request": "इनकरेक्ट स्पेसिफिकेशन्स ओर मालफॉर्म्ड रिक्वेस्ट"
+    "Incorrect specifications or malformed request": "इनकरेक्ट स्पेसिफिकेशन्स ओर मालफॉर्म्ड रिक्वेस्ट",
+    "This store does not service your location": "This store does not service your location"
   },
   "Raise Issue": {
     "Raise an Issue": "मुद्दा मांडा",
