--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -746,7 +746,8 @@
     "Order Cancelled": "ஆர்டர் ரத்து செய்யப்பட்டது",
     "Download Invoice": "விலைப்பட்டியலைப் பதிவிறக்கவும்",
     "Go Home": "கோ ஹோம்",
-    "Incorrect specifications or malformed request": "இன்கரெக்ட் ஸ்பெசிபிகேஷன்ஸ் ஆர் மால்ஃபார்ம்ட் ரிக்வெஸ்ட்"
+    "Incorrect specifications or malformed request": "இன்கரெக்ட் ஸ்பெசிபிகேஷன்ஸ் ஆர் மால்ஃபார்ம்ட் ரிக்வெஸ்ட்",
+    "This store does not service your location": "This store does not service your location"
   },
   "Raise Issue": {
     "Raise an Issue": "ஒரு பிரச்சினையை எழுப்புங்கள்",
