--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -746,7 +746,8 @@
     "Order Cancelled": "Order Cancelled",
     "Download Invoice": "Download Invoice",
     "Go Home": "Go Home",
-    "Incorrect specifications or malformed request": "Incorrect specifications or malformed request"
+    "Incorrect specifications or malformed request": "Incorrect specifications or malformed request",
+    "This store does not service your location": "This store does not service your location"
   },
   "Raise Issue": {
     "Raise an Issue": "Raise an Issue",
