--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -746,8 +746,8 @@
     "Order Cancelled": "आदेश रद्द किया गया",
     "Download Invoice": "चालान डाउनलोड करें",
     "Go Home": "गो होम",
-    "Incorrect specifications or malformed request": "इनकरेक्ट स्पेसिफिकेशंस ओर मालफॉर्म्ड रिक्वेस्ट",
-    "This store does not service your location": "This store does not service your location"
+    "Incorrect specifications or malformed request": "लिंक में समस्या - विक्रेता से संपर्क करें या रिपोर्ट करें - {{email}}",
+    "This store does not service your location": "यह विक्रेता वर्तमान में उपलब्ध नहीं है. कृपया बाद में जांचें"
   },
   "Raise Issue": {
     "Raise an Issue": "एक मुद्दा उठाओ",
