--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -747,7 +747,8 @@
     "Download Invoice": "விலைப்பட்டியலைப் பதிவிறக்கவும்",
     "Go Home": "கோ ஹோம்",
     "Incorrect specifications or malformed request": "இன்கரெக்ட் ஸ்பெசிபிகேஷன்ஸ் ஆர் மால்ஃபார்ம்ட் ரிக்வெஸ்ட்",
-    "This store does not service your location": "This store does not service your location"
+    "This store does not service your location": "This store does not service your location",
+    "This store/seller type is not supported by Saarthi Application, explore other buyer apps.": "This store/seller type is not supported by Saarthi Application, explore other buyer apps."
   },
   "Raise Issue": {
     "Raise an Issue": "ஒரு பிரச்சினையை எழுப்புங்கள்",
