--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -808,7 +808,9 @@
     "Some orders are not initialized": "কিছু অর্ডার আরম্ভ করা হয় না।",
     "Available Cities": "উপলব্ধ শহরগুলি",
     "The app is only for Delhi city": "অ্যাপটি শুধুমাত্র দিল্লি শহরের জন্য।",
-    "Open with": "দিয়ে খুলুন"
+    "Open with": "দিয়ে খুলুন",
+    "Please log in to your account and set your preferences": "অনুগ্রহ করে আপনার অ্যাকাউন্টে লগ ইন করুন এবং আপনার পছন্দগুলি সেট করুন৷",
+    "Please set your preferences": "আপনার পছন্দ সেট করুন"
   },
   "Seller QR": {
     "ONDC QR se Bharat Khulega": "ওএনডিসি কিউআর সে ভারত খুলেগা"
