--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -808,7 +808,9 @@
     "Some orders are not initialized": "சில ஆர்டர்கள் துவக்கப்படவில்லை.",
     "Available Cities": "கிடைக்கக்கூடிய நகரங்கள்",
     "The app is only for Delhi city": "இந்த செயலி டெல்லி நகரத்திற்கு மட்டுமே பொருந்தும்",
-    "Open with": "உடன் திறக்கவும்"
+    "Open with": "உடன் திறக்கவும்",
+    "Please log in to your account and set your preferences": "உங்கள் கணக்கில் உள்நுழைந்து உங்கள் விருப்பங்களை அமைக்கவும்",
+    "Please set your preferences": "உங்கள் விருப்பங்களை அமைக்கவும்"
   },
   "Seller QR": {
     "ONDC QR se Bharat Khulega": "ஒஎன்டிசி கியூஆர் சே பாரத் குலேகா"
