bottom tab changed and tab UI also changed.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -772,6 +772,7 @@
     "Delivered On": "Delivered On"
   },
   "Orders": {
+    "Orders": "Orders",
     "No data found": "No data found",
     "Search": "Search",
     "Filter": "Filter",
