sub categories screen is updated.

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -209,6 +209,7 @@
   },
   "Featured Categories": {
     "Featured Categories": "ফিচার্ড ক্যাটেগরিস",
+    "Categories": "ক্যাটেগরিস",
     "Fashion": "ফ্যাশন",
     "Grocery": "মুদিখানা",
     "Electronics": "ইলেকট্রনিক্স",
