--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -209,6 +209,7 @@
   },
   "Featured Categories": {
     "Featured Categories": "Featured Categories",
+    "Categories": "Categories",
     "Fashion": "Fashion",
     "Grocery": "Grocery",
     "Electronics": "Electronics",
