--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -209,6 +209,7 @@
   },
   "Featured Categories": {
     "Featured Categories": "फीचर्ड कैटेगरीज",
+    "Categories": "कैटेगरीज",
     "Fashion": "पहनावा",
     "Grocery": "किराना",
     "Electronics": "इलेक्ट्रानिक्स",
