--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -209,6 +209,7 @@
   },
   "Featured Categories": {
     "Featured Categories": "फिचर्ड कॅटेगरीज",
+    "Categories": "कॅटेगरीज",
     "Fashion": "फॅशन",
     "Grocery": "किराणा",
     "Electronics": "इलेक्ट्रॉनिक्स",
