--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -209,6 +209,7 @@
   },
   "Featured Categories": {
     "Featured Categories": "பிச்சர்ட் கேட்டகரீஸ்",
+    "Categories": "கேட்டகரீஸ்",
     "Fashion": "ஃபேஷன்",
     "Grocery": "மளிகை",
     "Electronics": "மின்னணுவியல்",
