--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -57,7 +57,7 @@
     "Delivery Address": "டெலிவரி முகவரி",
     "Change": "மாற்றம்",
     "View Delivery Options": "டெலிவரி விருப்பங்களைப் பார்க்கவும்",
-    "items": "பொருட்களை",
+    "items": "பொருட்கள்",
     "Add to cart": "ஆட் டோ கார்ட்",
     "Product Details": "தயாரிப்பு விவரங்கள்",
     "Select any": "ஏதேனும் ஒன்றைத் தேர்ந்தெடுக்கவும்",
@@ -82,7 +82,7 @@
       "Customizable": "கஸ்டமைசபிள்"
     },
     "Filter List": {
-      "Filters": "வடிப்பான்கள்",
+      "Filters": "வடிகட்டிகள்",
       "Clear all": "அனைத்தையும் அழி",
       "Close": "நெருக்கமான",
       "Apply": "விண்ணப்பிக்கவும்"
@@ -780,7 +780,7 @@
     "Search": "தேடு",
     "Filter": "வடிகட்டி",
     "Filter List": {
-      "Filters": "வடிப்பான்கள்",
+      "Filters": "வடிகட்டிகள்",
       "Clear all": "அனைத்தையும் அழி",
       "Close": "நெருக்கமான",
       "Apply": "விண்ணப்பிக்கவும்",
