store details screen UI changes.

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -63,7 +63,7 @@
     "Select any": "যেকোনো একটি নির্বাচন করুন",
     "options": "বিকল্প",
     "Veg": "ভেগ",
-    "Non Veg": "নন ভেগ",
+    "Non Veg": "নন-ভেগ",
     "Egg": "ডিম",
     "Required": "প্রয়োজন",
     "Maximum allowed quantity": "সর্বাধিক অনুমোদিত পরিমাণ হল {{count}}",
