--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -63,7 +63,7 @@
     "Select any": "Select any",
     "options": "options",
     "Veg": "Veg",
-    "Non Veg": "Non Veg",
+    "Non Veg": "Non-Veg",
     "Egg": "Egg",
     "Required": "Required",
     "Maximum allowed quantity": "Maximum allowed quantity is {{count}}",
