--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -63,7 +63,7 @@
     "Select any": "कोई भी चुनें",
     "options": "विकल्प",
     "Veg": "वेग",
-    "Non Veg": "नॉन वेग",
+    "Non Veg": "नॉन-वेग",
     "Egg": "अंडा",
     "Required": "आवश्यक",
     "Maximum allowed quantity": "अधिकतम अनुमत मात्रा {{count}} है",
