--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -63,7 +63,7 @@
     "Select any": "कोणतेही निवडा",
     "options": "पर्याय",
     "Veg": "वेग",
-    "Non Veg": "नॉन वेग",
+    "Non Veg": "नॉन-वेग",
     "Egg": "अंडी",
     "Required": "आवश्यक आहे",
     "Maximum allowed quantity": "जास्तीत जास्त परवानगी असलेले प्रमाण {{count}} आहे",
