--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -63,7 +63,7 @@
     "Select any": "ஏதேனும் ஒன்றைத் தேர்ந்தெடுக்கவும்",
     "options": "விருப்பங்கள்",
     "Veg": "வெக்",
-    "Non Veg": "நான் வெக்",
+    "Non Veg": "நான்-வெக்",
     "Egg": "முட்டை",
     "Required": "தேவை",
     "Maximum allowed quantity": "அனுமதிக்கப்பட்ட அதிகபட்ச அளவு {{count}}",
