chg: refactor code structure, updated profile flow

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -110,7 +110,7 @@
     "My Profile": "আমার প্রোফাইল",
     "Order History": "অর্ডার ইতিহাস",
     "Complaints": "অভিযোগ",
-    "Choose Language": "ভাষা নির্বাচন করুন",
+    "Language": "ভাষা",
     "Logout": "প্রস্থান",
     "No data found": "কোন তথ্য পাওয়া যায়নি",
     "Are you sure you want to logout?": "আপনি লগ আউট করতে চান",
