--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -110,7 +110,7 @@
     "My Profile": "My Profile",
     "Order History": "Order History",
     "Complaints": "Complaints",
-    "Choose Language": "Choose Language",
+    "Language": "Language",
     "Logout": "Logout",
     "No data found": "No data found",
     "Are you sure you want to logout?": "Are you sure you want to logout",
