--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -110,7 +110,7 @@
     "My Profile": "मेरी प्रोफाइल",
     "Order History": "आदेश इतिहास",
     "Complaints": "शिकायतों",
-    "Choose Language": "भाषा चुनें",
+    "Language": "भाषा",
     "Logout": "लॉग आउट",
     "No data found": "डाटा प्राप्त नहीं हुआ",
     "Are you sure you want to logout?": "क्या आप लॉग आउट करना चाहते हैं",
