--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -110,7 +110,7 @@
     "My Profile": "माझे प्रोफाइल",
     "Order History": "ऑर्डर इतिहास",
     "Complaints": "तक्रारी",
-    "Choose Language": "भाषा निवडा",
+    "Language": "भाषा",
     "Logout": "बाहेर पडणे",
     "No data found": "माहिती आढळली नाही",
     "Are you sure you want to logout?": "तुमची खात्री आहे की तुम्ही लॉगआउट करू इच्छिता",
