--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -110,7 +110,7 @@
     "My Profile": "என் சுயவிவரம்",
     "Order History": "ஆர்டர் வரலாறு",
     "Complaints": "புகார்கள்",
-    "Choose Language": "மொழியைத் தேர்ந்தெடுக்கவும்",
+    "Language": "மொழி",
     "Logout": "வெளியேறு",
     "No data found": "வேறு தகவல்கள் இல்லை",
     "Are you sure you want to logout?": "நீங்கள் நிச்சயமாக வெளியேற விரும்புகிறீர்களா",
