chg: translation for orders

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -785,6 +785,7 @@
     "Delivered On": "বিতরণ"
   },
   "Orders": {
+    "Orders": "আদেশ",
     "No data found": "কোন তথ্য পাওয়া যায়নি",
     "Search": "অনুসন্ধান করুন",
     "Filter": "ছাঁকনি",
