--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -785,6 +785,7 @@
     "Delivered On": "सौंप दिया"
   },
   "Orders": {
+    "Orders": "ऑर्डर",
     "No data found": "डाटा प्राप्त नहीं हुआ",
     "Search": "खोज",
     "Filter": "फ़िल्टर",
