--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -785,6 +785,7 @@
     "Delivered On": "वर वितरित"
   },
   "Orders": {
+    "Orders": "ऑर्डर",
     "No data found": "माहिती आढळली नाही",
     "Search": "शोधा",
     "Filter": "फिल्टर करा",
