--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -785,6 +785,7 @@
     "Delivered On": "அன்று வழங்கப்பட்டது"
   },
   "Orders": {
+    "Orders": "Orders",
     "No data found": "வேறு தகவல்கள் இல்லை",
     "Search": "தேடு",
     "Filter": "வடிகட்டி",
