chg: show outlet sheet only if address count is more than 1

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -631,7 +631,8 @@
     "hours": "{{time}} hrs",
     "minute": "{{time}} min",
     "minutes": "{{time}} mins",
-    "Opens at": "Opens at {{time}}"
+    "Opens at": "Opens at {{time}}",
+    "Outlets": "Outlets"
   },
   "Network Banner": {
     "You are offline, please verify your internet connection": "You are offline, please verify your internet connection"
