--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -630,7 +630,8 @@
     "hours": "{{time}} hrs",
     "minute": "{{time}} min",
     "minutes": "{{time}} mins",
-    "Opens at": "Opens at {{time}}"
+    "Opens at": "Opens at {{time}}",
+    "Outlets": "আউটলেট"
   },
   "Network Banner": {
     "You are offline, please verify your internet connection": "আপনি অফলাইন, আপনার ইন্টারনেট সংযোগ যাচাই করুন"
