--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -39,9 +39,10 @@
       "No providers available": "कोई प्रदाता उपलब्ध नहीं है"
     }
   },
-  "List": {
-    "List": "सूची",
-    "Coming soon": "जल्द आ रहा है"
+  "WishList": {
+    "Wishlist": "इच्छा-सूची",
+    "Your Wishlist is empty": "अपकि इच्छा सूची खाली है",
+    "Save your favorites in your wishlist. Review them anytime and easily add them to your cart.": "अपनी पसंदीदा चीज़ों को अपनी इच्छा सूची में सहेजें। उन्हें कभी भी देखें और आसानी से अपने कार्ट में जोड़ें।"
   },
   "Cart": {
     "Cart": "कार्ट",
