--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -42,7 +42,12 @@
   "WishList": {
     "Wishlist": "Wishlist",
     "Your Wishlist is empty": "Your Wishlist is empty",
-    "Save your favorites in your wishlist. Review them anytime and easily add them to your cart.": "Save your favorites in your wishlist. Review them anytime and easily add them to your cart."
+    "Save your favorites in your wishlist. Review them anytime and easily add them to your cart.": "Save your favorites in your wishlist. Review them anytime and easily add them to your cart.",
+    "Remove Wishlist": "Remove Wishlist",
+    "Are you sure you would like to remove the store from wishlist?": "Are you sure you would like to remove the store from wishlist?",
+    "No": "No",
+    "Yes": "Yes",
+    "Are you sure you want to remove this item from wishlist?": "Are you sure you want to remove this item from wishlist?"
   },
   "Cart": {
     "Cart": "Cart",
