--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -41,6 +41,8 @@
   },
   "WishList": {
     "Wishlist": "Wishlist",
+    "Wishlisted": "Wishlisted",
+    "Delete Item": "Delete Item",
     "Your Wishlist is empty": "Your Wishlist is empty",
     "Save your favorites in your wishlist. Review them anytime and easily add them to your cart.": "Save your favorites in your wishlist. Review them anytime and easily add them to your cart.",
     "Remove Wishlist": "Remove Wishlist",
