--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -41,6 +41,8 @@
   },
   "WishList": {
     "Wishlist": "विशलिस्ट",
+    "Wishlisted": "विशलिस्ट",
+    "Delete Item": "आयटम हटवा",
     "Your Wishlist is empty": "तुमची विशलिस्ट रिकामी आहे",
     "Save your favorites in your wishlist. Review them anytime and easily add them to your cart.": "तुमच्या विशलिस्टमध्ये तुमचे आवडते सेव्ह करा. त्यांचे कधीही पुनरावलोकन करा आणि त्यांना तुमच्या कार्टमध्ये सहज जोडा.",
     "Remove Wishlist": "विशलिस्ट काढा",
